fixed navbar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+#root {
+  position: relative;
+  height: 100vh;
+}
